DatasetGraphMem2Fast supporting MRPlusSW. - using Java21 and virtual threads where it seemed appropriate